# Rusty

./: LICENSE  README.md  index.md  please_check_the_dbfile.txt  robot_localize.launch
Kalman_filter/: gaussian.hpp  main.cpp  measurement_update.hpp  motion_update.hpp  multi_variate_kalmanfilter.cpp
arm_config/: package.xml
rusty/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rusty/config/: base_local_planner_params.yaml  costmap_common_params.yaml  gmapping_params.yaml  local_costmap_params.yaml  location.yaml  nav2_params.yaml  rusty_nav.rviz
rusty/launch/: HomeService.launch  amcl.launch  cartographer_slam.launch  ekf.launch  gazebo.launch  house.launch  kartoSLAM.launch  localization.launch  mapping.launch  move_base.launch  navigation.launch  odomtransform.launch  office_layout.launch  robot.launch.py  robot_spawn.launch  rtab_map.launch  rusty_slam.launch  server_bringup.launch  teleop_key.launch
rusty/maps/: first_slam.yaml  house.pgm  house.yaml  map.pgm  map.yaml  studyroom.pgm  studyroom.yaml
rusty/params/: costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml
rusty/robot_param/: base_local_planner.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
rusty/rusty/: laser_scan_processing.py
rusty/scripts/: add_marker.sh  gui.py  homeservice.sh  navigation.sh  pick_object.sh  test_slam.sh
rusty/src/: odom_pub.py  odomtransformer.py  pick_obj.cpp  teleop_key.py  virtual_box.cpp
rusty_amr/: CMakeLists.txt  package.xml
rusty_arm_config/: package.xml  (+1 more)
(+84 files in other folders)
