<?xml version="1.0"?>
<package format="2">
  <name>rusty</name>
  <version>0.0.0</version>
  <description>The rusty package</description>

 
  <maintainer email="siddarth.dayasagar@gmail.com">siddarth</maintainer>


 
  <license>MIT</license>
  <exec_depend>message_runtime</exec_depend> 
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
